# csv-compare

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
vhs/: demo.tape
