[package]
name = "csv-compare"
version = "0.1.0"
edition = "2024"
description = "difftool for csv-files"
licence = "MIT"
authors = ["Attila Repka"]

[package.metadata.deb]
revision = ""

[dependencies]
anyhow = "1.0.99"
assert_fs = "1.1.3"
clap = { version = "4.5.45", features = ["derive"] }
colored = "3.0.0"
csv = "1.3.1"
inquire = "0.7.5"
similar = "2.7.0"
